# memra-local

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
memra_local/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  mcp_server.py  models.py
memra_local/hooks/: __init__.py  extractor.py  installer.py
memra_local/routes/: bootstrap.py  memories.py  search.py
memra_local/services/: embedding_service.py  factory.py  memory_service.py  migration_service.py  pii_client.py  sync_service.py
memra_local/storage/: flat_file.py  sqlite_index.py
tests/: conftest.py  test_account_call_removed.py  test_api.py  test_cli.py  test_cloud_bootstrap.py  test_embedding.py  test_event_id_format.py  test_hooks.py  test_locking.py  test_mcp.py  test_migration.py  test_pii_policy.py  test_scoping.py  test_server.py  test_storage.py  test_supersede.py  test_supersede_chain.py  test_sync.py
